# Foundry_project

./: .gitignore  Cargo.toml  README.md
fraquility/: Cargo.toml  foundry.toml  remappings.txt
fraquility/src/: MyToken.sol  chain_log.json  main.rs
fraquility/src/saved_code/: Alloy_working.txt  Token_impl_contract.txt  terminal_sim.txt
fraquility/src/shell_scripts/: deploy_tokens.sh
fraquility/src/shell_scripts/simulation/: chain_log.json  kill_anvil.sh  start_anvil.sh
fraquility/test/: MyToken.t.sol
mad_simmer/: Cargo.toml
mad_simmer/Diagrams/: activity.puml  builder_domain.puml  config.puml  domain.puml
mad_simmer/src/: actions.rs  config_reader.rs  lib.rs  sim_config.json  sim_interface.rs  sim_structs.rs  solidity_files.rs
