[package]
name = "fraquility"
version = "0.1.0"
edition = "2021"


[dependencies]
alloy = { version = "0.2.0", features = [
    "full",
    "node-bindings",
    "rpc-types-debug",
    "rpc-types-trace",
    "json-rpc",
    "rpc-client",
    "signer-aws",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-yubihsm",
] }
mad_simmer = { path = "../mad_simmer" }
eyre = "0.6.12"
futures = "0.3.30"
serde = "1.0.204"
serde_json = "1.0.121"
tokio = { version = "1.39.2", features = ["full"] }
log = "0.4.22"
env_logger = { version = "0.11.5"}
