[package]
name = "mad_simmer"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.2.0", features = [
    "full",
    "node-bindings",
    "rpc-types-debug",
    "rpc-types-trace",
    "json-rpc",
    "rpc-client",
    "signer-aws",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-yubihsm",
] }
eyre = "0.6.12"
futures = "0.3.30"
log = "0.4.22"
serde = "1.0.204"
serde_json = "1.0.121"
tokio = { version = "1.39.2", features = ["full"] }
env_logger = { version = "0.11.5"}
bytes = "1.7.1"
